examples/test/testpolicy10427.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10427
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key48: value38
      key10: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value48
          key35: value46
      podSelector:
        matchLabels:
          key46: value49
          key48: value45
          key11: value42
